2009-08-31  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Improve autonomy of other packages using SLC.
	
	* build-aux/slc.m4: Also try find `slc' in PATH if not specified
	with `--with-slc' or SLC_BASE. Reject double slashes in SLC_BASE
	as this is known to cause issues with M4.

2009-08-31  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Fix `slr' bug.

	Under some circumstances `slr' would not be able to find which
	runner to use with an executable after it was compiled. This
	changeset addresses this issue. (reported by M. Lankamp)
	
	* tools/lib/host-host-seqc/slrt.c,	
	* tools/lib/host-host-ptl/slrt.c: Ensure that the magic strings
	are prefixed by a NUL byte so that the `strings' command can find
	them. 
	
2009-08-31  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Fix packaging.

	* lib/Makefile.am: Distribute and install `svp/callgate.h'.

2009-08-30  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Update documentation.

	* doc/HACKING.txt,
	* doc/NEWS.txt,
	* doc/README.txt,
	* doc/acronyms.txt,	
	* doc/requirements.txt: Update to latest software changes.

2009-08-29  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Fix typo in `sac_helpers.h'.

	* lib/include/sac_helpers.h (fast_safe_free): Delegate to
	`fast_free', not `safe_free'.

2009-08-28  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Add more SAC to muTC helpers.
	
	* lib/include/sac_helpers.h: Also provide `fast_safe_free'.

2009-08-28  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Packaging fix.
	
	* lib/Makefile.am: Distribute and install `calloca.h'.

2009-08-28  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Improve global memory allocation.

	This changeset introduces a set of `fast_' wrappers around memory
	allocation functions toavoid an intermediary function context to
	reach their respective algorithm. This was suggested by Chris
	Jesshope. Also increase the `malloc' pool by larger chunks, so
	that pool extension happens less often.
	
	* lib/src/callgate.h: Rename to...
	* lib/include/svp/callgate.h: ...here. Simplify.
